# svgdigitizer

./: .gitignore  .pylintrc  .zenodo.json  AuthorYYMMDD_fignr_001.yaml  ChangeLog  Ni111_NaOH_Beden1985_Fig2c.yaml  README.md  csvcreator.py  digitizer.py  environment.yml  flake.nix  pyproject.toml  rever.xsh  setup.py  svgdigitizer.py  svgdigitzer.ipynb
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cancel.yml  doc.yml  joss-draft.yml  lint.yml  nix.yml  style.yml  test.yml
doc/: .gitignore  Makefile  README.md  api.md  cli.md  conf.py  index.md  index.rst  installation.md  usage.md  workflow.md
doc/_templates/: breadcrumbs.html
doc/api/: cv.md  svg.md  svgfigure.md  svgplot.md
doc/files/: .gitignore  Publication_example_p1_blue.csv
doc/files/mustermann_2021_svgdigitizer_1/: .gitignore  mustermann_2021_svgdigitizer_1.bib  mustermann_2021_svgdigitizer_1_f2a_blue.yaml  mustermann_2021_svgdigitizer_1_p1_2a_blue.yaml
doc/files/others/: .gitignore  cyclist2023.bib  example_plot.xopp  example_plot_p0_demo.csv  example_plot_p0_demo.json  looping.csv  looping.json  looping.xopp  looping_scale_bar.xopp  looping_scaling_factor.xopp  looping_scan_rate_bib.yaml  looping_scan_rate_yaml.yaml  scatter_plot.xopp
doc/news/: TEMPLATE.rst  algorithm.rst  arm64.rst  astropy-080.rst  axis-labels.rst  axisunit.rst  bibdir.rst  bibliography.rst  cached_property.rst  camel-case.rst  changelo-0.13.0.rst  create-plot.rst  cv-linked.rst  cv4.rst  cvmetadata2.rst  datadescription.rst  dep-update.rst  dependencies.rst  dependency_svgpath_scipy.rst  direnv.rst  docu-v0.10.0.rst  doi-paginate.rst  doi.rst  echemdb-package.rst  edit-on-github.rst  entrypoint.rst  exceptions.rst  figure-plot.rst  fix-bibtex-pages.rst  fix-embedded-mimetype.rst  fix-paginate.rst  frictionless-click.rst  frictionless.rst  frictionless5.rst  installation.rst  json-encoding.rst  label_distance_calculation.rst  latex-unicode-roundtrip.rst  macos.rst  maindocu.rst  (+36 more)
docs/: .buildinfo  api.html  cli.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html  workflow.html
docs/_downloads/0bedde854050cea55bda0760ac710b3b/: cyclist2023.bib
docs/_downloads/12edb710eab417e1a24d90966dc04417/: looping_scan_rate_yaml.yaml
docs/_downloads/33aa0005e6629134d025f1ed3f71821f/: looping_scan_rate_bib.yaml
docs/_downloads/43c9e7806b559a0d037fa8f831b795f9/: mustermann_2021_svgdigitizer_1_p1_2a_blue.yaml
docs/_downloads/f3edd92abfa46114c05eee661d38ff8d/: example_plot_p0_demo.csv
docs/_sources/: api.md.txt  cli.md.txt  index.md.txt  usage.md.txt  workflow.md.txt
docs/_sources/api/: pdf.md.txt  svg.md.txt  svgplot.md.txt
docs/_static/: documentation_options.js
docs/api/: cv.html  pdf.html  svg.html  svgfigure.html  svgplot.html
docs/svgdigitizer/: api.html  cli.html  index.html
docs/svgdigitizer/_sources/: api.md.txt
docs/svgdigitizer/api/: cv.html  svg.html
paper/: README.md  joss_example_paper.md  joss_paper_format.md  joss_submission_requirements.md  paper.bib  paper.md  svgdigitizer_codebase_report.md
svgdigitizer/: __main__.py  csvcreator.py  digitizer.py  entrypoint.py  exceptions.py  helpers.py  pdf.py  svg.py  svgdigitizer.py  svgfigure.py  svgplot.py
svgdigitizer/electrochemistry/: cv.py  electrolyte.py  normalization.py
svgdigitizer/helpers/: converter.py
svgdigitizer/models/: exceptions.py
svgdigitizer/test/: cli.py
test/: test_regex.py
test/bibliography/: bibliography.bib  bibliography_directory.bib
test/data/: .gitignore  AuthorYYMMDD_fignr_001.yaml  Author_YYYY_FirstTitleWord_Page_fignr_identifier.yaml  Ni111_NaOH_Beden1985_Fig2c.csv.expected  Ni111_NaOH_Beden1985_Fig2c.yaml  axes_orientation.csv.expected  axes_orientation.json.expected  bibliography_directory.csv.expected  bibliography_directory.json.expected  bibliography_directory.yaml  briega-martos_2021_cation_48_p2_f1_Cs_2_3.yaml  cv_bibliography.bib  cv_bibliography.csv.expected  cv_bibliography.json.expected  cv_bibliography.yaml  cv_bibliography_key.csv.expected  cv_bibliography_key.json.expected  cv_bibliography_key.yaml  cv_comment.csv.expected  cv_comment.json.expected  cv_comment.yaml  figure_bibliography.csv.expected  figure_bibliography.json.expected  figure_bibliography.yaml  figure_comment.json.expected  label_distance_calculation.csv.expected  label_distance_calculation.json.expected  package.json.expected  package.yaml  package_bibliography.bib  package_bibliography.json.expected  package_bibliography.yaml  package_citation.bib  package_citation.json.expected  package_citation.yaml  package_no_bibliography.csv.expected  package_no_bibliography.json.expected  package_no_bibliography.yaml  sampling.csv.expected  sampling.yaml  (+24 more)
tests/: test_regex.py
