[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "svgdigitizer"
version = "0.13.0"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description = "svgdigitizer is a Python library and command line tool to recover the measured data underlying plots in scientific publications."
readme = "README.md"
requires-python = ">=3.9"
# Additions and removals of dependencies need to be reflected in flake.nix
dependencies = [
    "astropy>=5,<8",
    "click>=8,<9",
    "frictionless>=5.8.3,<6",
    "matplotlib>=3.5,<4",
    "mergedeep>=1.3.4,<2",
    "pandas>=1.3,<4",
    "pillow>=9,<12",
    "pybtex>=0.25,<0.26",
    "pymupdf>=1.26,<2",
    "pyyaml>=6,<7",
    "requests>2,<3",
    "scipy>=1.7,<2",
    "svg.path>=4.1,<8",
    "svgpathtools>=1.4,<2",
    "svgwrite>=1.4,<2",
]


[project.scripts]
svgdigitizer = "svgdigitizer.entrypoint:cli"

[tool.setuptools]
packages = [
    "svgdigitizer",
    "svgdigitizer.electrochemistry",
    "svgdigitizer.test",
]

[tool.setuptools.package-data]
svgdigitizer = ["assets/template.svg"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.environments]
python-39 = ["test", "python-39"]
python-310 = ["test", "python-310"]
python-311 = ["test", "python-311"]
python-312 = ["test", "python-312"]
python-313 = ["test", "python-313"]
dev = ["dev", "doc", "test", "lint"]

[tool.pixi.dependencies]
astropy = "*"
click = "*"
frictionless = "*"
matplotlib-base = "*"
mergedeep = "*"
pandas = "*"
pillow = "*"
poppler = "*"
pybtex = "*"
python = "*"
pyyaml = "*"
requests = "*"
scipy = "*"
"svg.path" = "*"
svgpathtools = "*"
svgwrite = "*"

[tool.pixi.tasks]
svgdigitizer = "svgdigitizer"

[tool.pixi.pypi-dependencies]
svgdigitizer = { path = ".", editable = true }

[tool.pixi.feature.python-39.dependencies]
python = "3.9.*"

[tool.pixi.feature.python-310.dependencies]
python = "3.10.*"

[tool.pixi.feature.python-311.dependencies]
python = "3.11.*"

[tool.pixi.feature.python-312.dependencies]
python = "3.12.*"

[tool.pixi.feature.python-313.dependencies]
python = "3.13.*"

[tool.pixi.feature.test.dependencies]
check-jsonschema = "*"
pytest = "*"
pytest-xdist = "*"

[tool.pixi.feature.test.tasks]
# To validate the metadata against a specific version preceded the version by `tags` such as `tags/0.3.0`.
# To validate the metadata against metadata in a specific branch use `head/branch-name`.
validate = { args = [ { "arg" = "version", "default" = "tags/0.3.0" } ],cmd = "check-jsonschema --schemafile https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/svgdigitizer_package.json --base-uri https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/svgdigitizer_package.json --no-cache $(find ./test/data/ -type f -name '*.json.expected')" }
doctest = "pytest -n auto --doctest-modules svgdigitizer"

[tool.pixi.feature.lint.dependencies]
black = ">=23,<24"
isort = "*"
pylint = ">=3,<3.1"

[tool.pixi.feature.lint.tasks]
pylint = "pylint svgdigitizer"
black = "black svgdigitizer"
isort = "isort --profile black svgdigitizer"
lint = { depends-on = ["pylint", "black", "isort"] }

[tool.pixi.feature.doc.dependencies]
jupytext = "*"
make = "*"
myst-parser = "*"
myst-nb = "*"
sphinx = "*"
sphinx-design = "*"
sphinx_rtd_theme = "*"

[tool.pixi.feature.doc.tasks]
doc = "cd doc && make html SPHINXOPTS='-W -n --keep-going'"
linkcheck = "cd doc && make linkcheck"

[tool.pixi.feature.dev.dependencies]
pip = "*"
conda = "*"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*builtin type swigvarlink has no __module__ attribute.*:DeprecationWarning::",
    "ignore:.*builtin type SwigPyObject has no __module__ attribute.*:DeprecationWarning::",
    "ignore:.*builtin type SwigPyPacked has no __module__ attribute.*:DeprecationWarning::",
]
